# micam-rs

./: Dockerfile.miloco
.github/workflows/: docker-micam-rs.yaml
micam-rs/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.personal.yml  docker-compose.yml
micam-rs/src/: lib.rs  main.rs  miloco.rs  native_miot.rs  oauth.rs
