[package]
name = "micam-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance WebSocket to RTSP bridge for Xiaomi Miloco"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
http = "1"
native-tls = "0.2"
reqwest = { version = "0.12", features = ["cookies", "json", "native-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
tokio-native-tls = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
